welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:3: error: not found: value isFacingTrail
    var isFacingTrail() : Boolean =false 
        ^