welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    var isFacingTrail() : Boolean =false 
    if(isFacingTrail == false){
    	isFacingTrail();
    
    }
}

def isFacingTrail():Boolean = {
 if(estFaceMur){
 	return false;
 }
    	avance();
    	if(getCouleurSol()==Color.green){
    		
    		recule();
    	
    		
    		
    		return true;
         	
    		}else{
    		recule();	
    		return false;
    			
    		}
    	}
    		
    		
    

